"fixed" issue at top. Fixed issue with portfolio breaking on smaller screen, but now broken on bigger screen.

--- a/css/index.css
+++ b/css/index.css
@@ -25,7 +25,6 @@
     -o-background-size: cover;
     background-size: cover;
     background-color: #cccccc;
-    padding-top: 30px;
 
 }
 
